chore: Update menu button background image and fix top bar position on tablet

--- a/react/components/Menu/components/MenuContent/styles.css
+++ b/react/components/Menu/components/MenuContent/styles.css
@@ -77,6 +77,7 @@
 .menuButton {
   background: transparent;
   background-image: url('data:image/svg+xml,<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.625 10.5001H18.375" stroke="%23101820" stroke-width="2" stroke-linecap="square" stroke-linejoin="round"/><path d="M2.625 5.25H18.375" stroke="%23101820" stroke-width="2" stroke-linecap="square" stroke-linejoin="round"/><path d="M2.625 15.75H18.375" stroke="%23101820" stroke-width="2" stroke-linecap="square" stroke-linejoin="round"/></svg>');
+  background-repeat: no-repeat;
   width: 21px;
   height: 21px;
   border: none;
